data/collection/fixes/descriptions/scala/scala-7226
Compiles in 2.9.2, not in 2.10.0.
```scala
trait HK {
  type Rep[A]
  def unzip1[A, B, C[_]](ps: Rep[C[(A, B)]]): (Rep[C[A]], Rep[C[B]])
  def doUnzip1[A, B](ps: Rep[List[(A, B)]]) = unzip1(ps)
}
```
```
./a.scala:7: error: type mismatch;
 found   : HK.this.Rep[List[(A, B(in method doUnzip1))]]
 required: HK.this.Rep[List[((A, B(in method doUnzip1)), B(in method unzip1))]]
  def doUnzip1[A, B](ps: Rep[List[(A, B)]]) = unzip1(ps)
                                                     ^
one error found
```
The commit in which it regressed is https://github.com/scala/scala/commit/0cde930b19 ; I don't yet see how.